Open up more modules for tests
Signed-off-by: Matt Sicker <mattsicker@apache.org>